--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,3 +1,7 @@
 .container {
-  background-color: var(--main-bg-color);
+  background-color: var(--color-white);
+  padding: 1.5rem 2rem;
+  margin: 0 auto;
+  max-width: 50rem;
+  height: 100vh;
 }
