--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --main-bg-color: #f9fafb;
-  --color-white: #ffffff;
-  --color-gray-text: #6B7280;
-  --color-gray-border: #E5E7EB;
+  --color-white: #fff;
+  --color-gray-text: #6b7280;
+  --color-gray-border: #e5e7eb;
 }
