--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,7 @@
 body {
   background-color: var(--main-bg-color);
+  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo,
+    sans-serif;
 }
 
 a {
