fix design index page

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   --main-bg-color: #f9fafb;
   --color-white: #fff;
+  --color-black: #000;
   --color-blue: #3B82F6;
   --color-red: #EF4444;
   --color-green: #10B981;
