--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -17,7 +17,13 @@
   line-height: 2rem;
 }
 
-.body h2, .body h3 {
+.body h2 {
+  padding-bottom: 0.25rem;
+  margin: 2rem 0;
+  border-bottom: 1px solid var(--color-gray-border);
+}
+
+.body h3 {
   margin: 1rem 0;
 }
 
