--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,10 @@
 body {
-  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo,
+  font-family:
+    'Helvetica Neue',
+    Arial,
+    'Hiragino Kaku Gothic ProN',
+    'Hiragino Sans',
+    Meiryo,
     sans-serif;
 }
 
@@ -9,7 +14,7 @@ a {
 }
 
 code {
-  font-family: 'Fira Code';
+  font-family: 'Fira Code', monospace;
 }
 
 .main {
@@ -23,4 +28,3 @@ code {
     border-radius: 0;
   }
 }
-
