--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,15 @@
   padding: 0.5rem 1rem;
   height: var(--height-header);
   background-color: var(--color-white);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .header h1 {
   font-style: italic;
+}
+
+.icon {
+  margin-right: 1rem;
 }
