--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -36,6 +36,7 @@
 
 .body p code {
   padding: 0.2rem;
+  word-break: break-all;
   background-color: var(--color-gray-border);
   border-radius: 0.2rem;
 }
@@ -66,3 +67,7 @@
   padding: 1rem;
 }
 
+.body img {
+  width: 100%;
+  height: auto;
+}
