Post go mecab (#3)
add a new article (go-mecab)

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -49,6 +49,10 @@
   text-decoration: underline;
 }
 
+.body pre {
+  margin-top: 2rem;
+}
+
 .body table {
   margin-top: 1rem;
   border-collapse: collapse;
